--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
